# masvidaconsciente-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backup  Dockerfile.worker  ENOVA-onboarding-datos.md  ENOVA_BLUEPRINT.md  RESPALDO.md  ROADMAP.md  SESIONES.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  init_db.py  main.py  models.py
app/agent/: agent.py  hoja.py  system_prompt.py  tools.py
app/api/: router.py  security.py
app/services/: db.py  embeddings.py  media_convert.py  mensajes.py  meta_client.py  r2.py  redis_client.py  tasa.py  tools_config.py
app/webhook/: parser.py  router.py  signature.py
app/workers/: celery_app.py  tasks.py
migrations/: 001_init.sql  002_seed_catalogo.sql  003_pagos.sql  004_pago_parcial.sql  005_cliente_notas.sql  006_conocimiento.sql  007_cliente_bot_pausado.sql  008_catalogo_pdf.sql  009_metodos_pago.sql  010_metodo_cuenta.sql  011_busqueda_difusa.sql  012_conocimiento_embedding.sql  013_producto_ficha.sql  014_producto_media.sql  015_intervenciones.sql  016_pedido_entrega.sql  017_horario_entrega.sql  018_horas.sql  019_bandeja.sql  020_quien_paso.sql  021_hilo_completo.sql  022_variantes.sql  022b_variantes_datos.sql  023_zonas_entrega.sql  024_usuario_rol.sql  025_agente_dos.sql
scripts/: backup.sh  convertir_media_vieja.py  correr_bancos.py  ensayo_closer.py  ensayo_closer_dominio.py  ensayo_closer_evaluacion.py  ensayo_dos_agentes.py  ensayo_retomar.py  probar_bandeja.py  probar_buscador.py  probar_carril_dinero.py  probar_cobro.py  probar_datos_bancarios.py  probar_delivery.py  probar_dos_agentes.py  probar_drift.py  probar_fase2.py  probar_fotos_proactivas.py  probar_herramientas.py  probar_honestidad.py  probar_media.py  probar_migraciones.py  probar_panel_tamanos.py  probar_recibo_visible.py  probar_retomar.py  probar_roles.py  probar_testigo.py  promover_a_produccion.sh  recomprimir_fotos.py  validar_agente.py  validar_webhook.py
tests/: conftest.py  test_redes.py
